--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.3.3",
     "ngx-infinite-scroll": "^13.0.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.12.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
